poprawka importów